# mySCDN

./: README.md
LibHelp/: CMakeLists.txt  Client.cpp  Client.h  HttpCommunication.cpp  HttpCommunication.h  Mapper.h  Print.cpp  Print.h  Server.cpp  Server.h  ServerConfig.cpp  StandardCommunication.h  TcpCommunication.cpp  TcpCommunication.h  main.cpp
Node/: CMakeLists.txt  Database.cpp  Database.h  Print.cpp  Print.h  main.cpp
Node/BusinessLayer/: CacheService.cpp  CacheService.h  InitialiseService.cpp  InitialiseService.h  SearchService.cpp  SearchService.h  UploadService.cpp  UploadService.h
Node/Common/: Command.h
Node/DTO/: CacheCreateDto.h  CacheDto.cpp  CacheDto.h  CacheRetrieveDto.h  CacheUpsertDto.cpp  CacheUpsertDto.h  ExternalCache.cpp  ExternalCache.h  ExternalCacheCreateDto.h  ExternalCacheRetrieveDto.h
Node/DataLayer/: CacheRepository.h  DatabaseContext.cpp  DatabaseContext.h  ExternalCacheRepository.h
Node/Infrastructure/: DeliveryNetwork.cpp  DeliveryNetwork.h  RecurrentDeleteOutdatedCache.h  RecurrentPing.h  TcpServer.cpp  TcpServer.h
Node/cmake/: FindTinyHelp.cmake
Proxy/: AdminQuery.h  CMakeLists.txt  Command.h  HttpCommunication.cpp  HttpCommunication.h  Node.h  Print.cpp  Print.h  ProxyServer.cpp  ProxyServer.h  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  main.cpp
Proxy/DTO/: CacheUploadRequest.h  CacheUpsertDto.h
Proxy/cmake/: FindTinyHelp.cmake
Supervisor/: CMakeLists.txt  main.cpp
Supervisor/cmake/: FindTinyHelp.cmake
tinyhelp/include/: HttpCommunication.h  ServerConfig.h  StandardCommunication.h  ThreadPool.h
